--- a/superheroes/src/components/Superheroes.css
+++ b/superheroes/src/components/Superheroes.css
@@ -1,6 +1,5 @@
 .superheroes-card {
   width: 60%;
-  margin: 2% auto;
   padding: 2%;
   border: 2px solid gray;
   border-radius: 10px;
@@ -8,6 +7,7 @@
 
 .superheroes-name {
   margin-top: 0;
+  text-align: center;
 }
 
 .text {
