--- a/week26/src/components/Cat.scss
+++ b/week26/src/components/Cat.scss
@@ -6,7 +6,7 @@ $textColor: rgb(255, 255, 255);
   margin: 10px;
 }
 
-.cat-card img {
+.cat-card-image {
   height: 150px;
 }
 
@@ -18,4 +18,14 @@ $textColor: rgb(255, 255, 255);
   border-radius: 5px;
   background-color: $mainColor;
   color: $textColor;
+}
+
+.selected {
+  border: 2px solid orange;
+  font-weight: bolder;
+}
+
+.cat-image{
+  width: 30px;  
+ padding: 20px;
 }
