--- a/rates/src/App.css
+++ b/rates/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
-  display: flex; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+@media (min-width: 768px) {
+  .App {
+    flex-direction: row;
+  }
+}
